# mosayco_install

./: CMakeLists.txt  CMenu.cpp  CMenu.h  main.cpp  menuPrincipal.cpp  menuPrincipal.h  testes.h
controller/: CControllers.cpp  CControllers.h  CExportUsers.cpp  CExportUsers.h  backup_usuarios.cpp
view/: CMenu.cpp  CMenu.h
